@startuml
class Prosjekt{
    prosjektid : int
    prosjektnavn : varchar
    prosjektbeskrivelse: varchar
    kategori : int
    sammerbeidsbedrift : integer
    stemmemetode : int
    shortenedurl : varchar
    qrimagepath : varchar
}

class Kategori{
    kategoriid : int
    kategorinavn : varchar
}

class Arrangement{
    arrangementid : int
    arrangementnavn : varchar
    arrangementbeskrivelse : varchar
    arrangementstemmemetode : int
    arrangementutgaar : date
}

class Arrangementdeltagelse{
    deltagelseid : int
    arrangement : int
    prosjekt : int
}

class Bedrift{
    bedriftid : int
    bedriftnavn : varchar
    bedriftbeskrivelse : varchar
}

class StemmeMetode{
    metodeid : int
    metodenavn : varchar
    metodeparameter : int
}

class Stemme{
    stemmeid : int
    arrangementdeltagelse : int
    epost : varchar
    stemmeverdi : int
    stemmetidspunkt : timestamp
}

class Studie{
    studieid : int
    studienavn : varchar
    studiebeskrivelse : varchar
    studiekategori : int
}

class UserGroup{
    groupid : int
    groupname : varchar
    grouplevel : int
}

class Users{
    userid : int
    username : varchar
    password : varchar
    usergroup : int
}

Arrangementdeltagelse "*" --* "1" Arrangement
Prosjekt "1" *-- "*" Arrangementdeltagelse
Stemme "*" -- "1" Prosjekt
Bedrift "1" *-- "*" Prosjekt
Kategori "1" *-- "*" Prosjekt
Arrangement "*" --* "1" StemmeMetode
Users "*" --* "1" UserGroup
Kategori "1" --* "*" Studie
@enduml